Configure changes to enable cross compiling.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49378 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libffi/configure.in
+++ b/libffi/configure.in
@@ -84,16 +84,16 @@ AC_CHECK_FUNCS(memcpy)
 AC_FUNC_ALLOCA
 
 dnl AC_CHECK_SIZEOF(char)
-AC_CHECK_SIZEOF(short)
-AC_CHECK_SIZEOF(int)
-AC_CHECK_SIZEOF(long)
-AC_CHECK_SIZEOF(long long)
-AC_CHECK_SIZEOF(float)
-AC_CHECK_SIZEOF(double)
-AC_CHECK_SIZEOF(long double)
+AC_COMPILE_CHECK_SIZEOF(short)
+AC_COMPILE_CHECK_SIZEOF(int)
+AC_COMPILE_CHECK_SIZEOF(long)
+AC_COMPILE_CHECK_SIZEOF(long long)
+AC_COMPILE_CHECK_SIZEOF(float)
+AC_COMPILE_CHECK_SIZEOF(double)
+AC_COMPILE_CHECK_SIZEOF(long double)
 
-AC_CHECK_SIZEOF(void *)
-AC_C_BIGENDIAN
+AC_COMPILE_CHECK_SIZEOF(void *)
+AC_C_BIGENDIAN_CROSS
 
 AC_SUBST(TARGET)
 AC_SUBST(TARGETDIR)
