* Makefile.in (c-parse.c): Handle .output file.         * objc/Make-lang.in (objc-parse.c): Likewise.         * cp/Make-lang.in (parse.c): Handle .output file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49393 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/Make-lang.in
+++ b/gcc/cp/Make-lang.in
@@ -120,10 +120,16 @@ $(srcdir)/cp/cfns.h: $(srcdir)/cp/cfns.gperf
 
 $(srcdir)/cp/parse.h: $(srcdir)/cp/parse.c
 $(srcdir)/cp/parse.c: $(srcdir)/cp/parse.y
-	@echo "Expect 36 shift/reduce conflicts and 58 reduce/reduce conflicts."
-	cd $(srcdir)/cp; $(BISON) $(BISONFLAGS) -d -o p$$$$.c parse.y ; \
-	grep '^#define[ 	]*YYEMPTY' p$$$$.c >> p$$$$.h ; \
-	mv -f p$$$$.c parse.c ; mv -f p$$$$.h parse.h
+	@echo "Expect 31 shift/reduce conflicts and 58 reduce/reduce conflicts."
+	cd $(srcdir)/cp && \
+	if $(BISON) $(BISONFLAGS) -d -o p$$$$.c parse.y; then \
+	  grep '^#define[ 	]*YYEMPTY' p$$$$.c >> p$$$$.h ; \
+	  test -f p$$$$.output && mv -f p$$$$.output parse.output ; \
+	  mv -f p$$$$.c parse.c ; mv -f p$$$$.h parse.h ; \
+	else \
+	  rm -f p$$$$.* ; \
+	  false ; \
+	fi
 
 #
 # Build hooks:
