* Makefile.am (clean-nat): New target.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49443 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -203,6 +203,10 @@ clean-local:
 ## We just remove every .class file that was created.
 	find . -name '*.class' -print | xargs rm -f
 
+# Just remove the objects from C++ sources, for testing the C++ compiler.
+clean-nat:
+	rm -f $(nat_files) $(x_nat_files)
+
 SUFFIXES = .class .java .h
 
 .class.lo:
