2002-02-04  Adam Megacz <adam@xwt.org>
        * configure.in: Add -lgdi32 -lwsock32 -lws2_32 to libgcj.spec
          if compiling for win32


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49507 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -232,7 +232,14 @@ test -d java/lang || mkdir java/lang
 AC_LINK_FILES(java/lang/${PLATFORM}Process.java, java/lang/ConcreteProcess.java)
 AC_LINK_FILES(java/lang/nat${PLATFORM}Process.cc, java/lang/natConcreteProcess.cc)
 
-SYSTEMSPEC=
+case "${host}" in
+    mingw)
+      SYSTEMSPEC="-lgdi32 -lwsock32 -lws2_32"
+    ;;
+    *)
+      SYSTEMSPEC=
+    ;;
+esac
 AC_SUBST(SYSTEMSPEC)
 
 LIBGCJTESTSPEC="-L`pwd`/.libs -rpath `pwd`/.libs"
