2002-02-04  Adam Megacz <adam@xwt.org>
        * win32.cc: Created it.
          configure.in: Added PLATFORM_SPECIFIC_SOURCES,
          which is set to posix.cc or win32.cc.
          Makefile.am: Updated it to use $(PLATFORM_SPECIFIC_SOURCES).


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49509 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.am
+++ b/libjava/Makefile.am
@@ -123,7 +123,7 @@ javao_files = $(java_source_files:.java=.lo) \
 	$(built_java_source_files:.java=.lo)
 x_javao_files = $(x_java_source_files:.java=.lo)
 
-libgcj_la_SOURCES = prims.cc posix.cc jni.cc exception.cc \
+libgcj_la_SOURCES = prims.cc $(PLATFORM_SPECIFIC_SOURCES) jni.cc exception.cc \
 	resolve.cc defineclass.cc interpret.cc name-finder.cc verify.cc \
 	$(nat_source_files)
 EXTRA_libgcj_la_SOURCES = boehm.cc nogc.cc posix-threads.cc no-threads.cc \
