* Makefile.in: Undo munging last change.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49519 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/Makefile.in
+++ b/libjava/Makefile.in
@@ -103,6 +103,7 @@ OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 PACKAGE = @PACKAGE@
 PERL = @PERL@
+PLATFORM_SPECIFIC_SOURCES = @PLATFORM_SPECIFIC_SOURCES@
 RANLIB = @RANLIB@
 STRIP = @STRIP@
 SYSDEP_SOURCES = @SYSDEP_SOURCES@
