2002-02-06  Adam Megacz <adam@xwt.org>
        * configure.in: Changed mingw) to *mingw*).
        * win32.cc: Created this file.
        * win32.h: Created this file.
        * win32.cc, prims.cc, win32.h (win32_exception_handler): Moved
        win32_exception_handler from prims.cc to win32.cc, added
        header in win32.h.
        * prims.cc: removed some #ifdef-WIN32'd headers which are no
        longer needed now that we have platform.h


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49566 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -204,7 +204,7 @@ TARGET_ECOS="$with_ecos"
 PLATFORMOBJS=
 case "$TARGET_ECOS" in
    no) case "$host" in
-      mingw)
+      *mingw*)
             PLATFORM=Win32
             PLATFORMOBJS=win32.lo
 	    PLATFORMH=win32.h
@@ -250,7 +250,7 @@ AC_LINK_FILES(java/lang/${PLATFORM}Process.java, java/lang/ConcreteProcess.java)
 AC_LINK_FILES(java/lang/nat${PLATFORM}Process.cc, java/lang/natConcreteProcess.cc)
 
 case "${host}" in
-    mingw)
+    *mingw*)
       SYSTEMSPEC="-lgdi32 -lwsock32 -lws2_32"
     ;;
     *)
@@ -852,7 +852,7 @@ case "${host}" in
  alpha*-*-linux*)
     SIGNAL_HANDLER=include/dwarf2-signal.h
     ;;
- mingw)
+ *mingw*)
     SIGNAL_HANDLER=include/win32-signal.h
     ;;
  *)
