* configure: Rebuilt. 	* configure.in: Removed unnecessary parens.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49581 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -772,7 +772,7 @@ AC_CHECK_HEADERS(inttypes.h, [
     AC_DEFINE(HAVE_INTTYPES_H, 1, [Define if <inttypes.h> is available])
     AC_DEFINE(JV_HAVE_INTTYPES_H, 1, [Define if <inttypes.h> is available])
 ])
-AC_HEADER_SYS_WAIT()
+AC_HEADER_SYS_WAIT
 
 AC_CHECK_TYPE([ssize_t], [int])
 
