--- a/libjava/include/config.h.in
+++ b/libjava/include/config.h.in
@@ -13,6 +13,9 @@
 /* Define if you have <alloca.h> and it should be used (not on Ultrix).  */
 #undef HAVE_ALLOCA_H
 
+/* Define if you have <sys/wait.h> that is POSIX.1 compatible.  */
+#undef HAVE_SYS_WAIT_H
+
 /* Define if your struct tm has tm_zone.  */
 #undef HAVE_TM_ZONE
 
