* config.guess: Updated to 2002-01-30's version. * config.sub: Updated to 2002-02-01's version. Contribute sh64-elf. 2000-12-01  Alexandre Oliva  <aoliva@redhat.com> * configure.in: Added sh64-*-*.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49628 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/configure.in
+++ b/configure.in
@@ -966,6 +966,9 @@ case "${target}" in
     esac
     noconfigdirs="$noconfigdirs target-libgloss ${libgcj}"
     ;;
+  sh64-*-*)
+    noconfigdirs="$noconfigdirs target-libgloss ${libgcj}"
+    ;;
   sparc-*-elf*)
     if [ x${is_cross_compiler} != xno ] ; then
 	   target_configdirs="${target_configdirs} target-libstub target-cygmon"
