2002-02-12  Adam Megacz <adam@xwt.org>
    * java/io/natFilePosix.cc: Copied this from natFile.cc.
    * java/io/natFile.cc: Removed from repository.
    * configure.in: Added AC_LINK_FILES for natFile${PLATFORM}.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@49700 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/configure.in
+++ b/libjava/configure.in
@@ -242,6 +242,7 @@ dnl to create the link will fail.
 test -d java || mkdir java
 test -d java/io || mkdir java/io
 test -d gnu || mkdir gnu
+AC_LINK_FILES(java/io/natFile${PLATFORM}.cc, java/io/natFile.cc)
 AC_LINK_FILES(java/io/natFileDescriptor${PLATFORM}.cc, java/io/natFileDescriptor.cc)
 
 dnl Likewise for ConcreteProcess.java and natConcreteProcess.cc.
