--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+2002-02-15  Josef Zlomek  <zlomek@matfyz.cz>
+
+        web.c (entry_register): Copy REG_ATTRS.
+
 Sat Feb  9 20:03:18 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* Merge from mainline (cfg-merge-20020902).
