--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Fri Feb 15 19:03:29 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* (abs and mov splitters/peep2s): Avoid generating of new register.
+
 2002-02-15  Josef Zlomek  <zlomek@matfyz.cz>
 
         web.c (entry_register): Copy REG_ATTRS.
