bb-reorder.c (find_traces_1_round): Better ordering of "if (A) B; C;"
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49824 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Sun Feb 17 19:13:54 CET 2002  Josef Zlomek  <zlomek@matfyz.cz>
+
+	bb-reorder.c (find_traces_1_round): Better ordering of "if (A) B; C;"
+
 Fri Feb 15 19:03:29 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* (abs and mov splitters/peep2s): Avoid generating of new register.
