--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,11 @@
+Tue Feb 19 11:33:55 CET 2002  Josef Zlomek  <zlomek@matfyz.cz>
+
+        bb-reorder.c (find_traces_1_round): Bug fix in optimization of
+	simple branches.
+
+	bb-reorder.c (copy_bb_p): Set different parameters when bb is hot and
+	when is not.
+
 Sun Feb 17 19:13:54 CET 2002  Josef Zlomek  <zlomek@matfyz.cz>
 
 	bb-reorder.c (find_traces_1_round): Better ordering of "if (A) B; C;"
