* cfglayout.c (function_tail_eff_head): Rename to ... 	(function_footer): ... this one. 	(unlink_insn_chain, duplicate_insn_chain): New functions. 	(label_for_bb): Only call block_label and emit debug message. 	(record_effective_endpoints): Actually unlink the headers and footers. 	(fixup_reorder_cahin): Re-insert the unlinked sequences. 	(cfg_layout_duplicate_bb): Use duplicate_insn_chain. 	* cfglayout.h (struct reorder_block_def): New fields footer/header; 	remove eff_head/eff_end.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49865 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,15 @@
+Tue Feb 19 12:48:17 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* cfglayout.c (function_tail_eff_head): Rename to ...
+	(function_footer): ... this one.
+	(unlink_insn_chain, duplicate_insn_chain): New functions.
+	(label_for_bb): Only call block_label and emit debug message.
+	(record_effective_endpoints): Actually unlink the headers and footers.
+	(fixup_reorder_cahin): Re-insert the unlinked sequences.
+	(cfg_layout_duplicate_bb): Use duplicate_insn_chain.
+	* cfglayout.h (struct reorder_block_def): New fields footer/header;
+	remove eff_head/eff_end.
+
 Tue Feb 19 11:33:55 CET 2002  Josef Zlomek  <zlomek@matfyz.cz>
 
         bb-reorder.c (find_traces_1_round): Bug fix in optimization of
