--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Thu Feb 21 13:06:21 CET 2002  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>
+
+	* cfglayout.c (cfg_layout_duplicate_bb): Modified.
+
 Tue Feb 19 12:48:17 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* cfglayout.c (function_tail_eff_head): Rename to ...
