* Makefile.in (cfgloopanal.o): Fix dependencies. 	(cfgloop.o): Add dependecy on toplev.h 	* basic-block.h (verify_loop_structure, recount_dominator, 	redirect_immediate_dominators, create_preheaders, 	loop_split_edge_with, force_single_succ_latches, 	just_once_each_iteration_p, num_loop_insns): Declare. 	(create_preheader): Modified declaration. 	* cfganal.c (dfs_enumerate_from): Modified. 	* cfgloop.c (glb_enum_p): Modified. 	(flow_loop_nodes_find, canonicalize_loop_headers): Fix formating. 	(get_loop_body): Modified. 	(verify_loop_structure): New. 	* cfgloopanal.c (cbp_enum_p): New static function. 	(create_preheader): Modified. 	(create_preheaders): Fix spelling in comment. 	(just_once_each_iteration_p, num_loop_insns, loop_split_edge_with, 	force_single_succ_latches): New. 	* loop-new.c (recount_dominator): Fix, make global. 	(iterate_fix_dominators, redirect_immediate_dominators): New. 	(nearest_common_dominator): Fix.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49930 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,26 @@
+Thu Feb 21 17:14:48 CET 2002  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>
+
+	* Makefile.in (cfgloopanal.o): Fix dependencies.
+	(cfgloop.o): Add dependecy on toplev.h
+	* basic-block.h (verify_loop_structure, recount_dominator,
+	redirect_immediate_dominators, create_preheaders,
+	loop_split_edge_with, force_single_succ_latches,
+	just_once_each_iteration_p, num_loop_insns): Declare.
+	(create_preheader): Modified declaration.
+	* cfganal.c (dfs_enumerate_from): Modified.
+	* cfgloop.c (glb_enum_p): Modified.
+	(flow_loop_nodes_find, canonicalize_loop_headers): Fix formating.
+	(get_loop_body): Modified.
+	(verify_loop_structure): New.
+	* cfgloopanal.c (cbp_enum_p): New static function.
+	(create_preheader): Modified.
+	(create_preheaders): Fix spelling in comment.
+	(just_once_each_iteration_p, num_loop_insns, loop_split_edge_with,
+	force_single_succ_latches): New.
+	* loop-new.c (recount_dominator): Fix, make global.
+	(iterate_fix_dominators, redirect_immediate_dominators): New.
+	(nearest_common_dominator): Fix.
+
 Thu Feb 21 13:06:21 CET 2002  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* cfglayout.c (cfg_layout_duplicate_bb): Modified.
