* (mark_conflict): Skip reg-reg copies.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@49933 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/cfg-branch/gcc/ChangeLog.cfg
+++ b/cfg-branch/gcc/ChangeLog.cfg
@@ -1,3 +1,7 @@
+Thu Feb 21 22:05:13 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* (mark_conflict): Skip reg-reg copies.
+
 Thu Feb 21 17:14:48 CET 2002  Zdenek Dvorak <rakdver@atrey.karlin.mff.cuni.cz>
 
 	* Makefile.in (cfgloopanal.o): Fix dependencies.
